--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<meta name="description" content="">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!--====== Favicon Icon ======-->
 	<link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
@@ -215,8 +215,21 @@
 		</div> -->
 
 		<!-- scroll bar -->
+		 <br>
+		 <br>
+		 <br>
+		 <br>
+		<div class="welcome">
+			<h3 style="text-transform: uppercase; color: white;">Welcome To Research hub</h3><br>
+				<p style="color: white; justify-content:center">Research hub is an International peer Reviewed Multiple disciplinary e-journal which promotes 
+					quality research in the field of higher education. Research friendly mechanism has been set up and all 
+				research papers are sent to UGC recognised centers for checking the plagiarism</p>
+			</div>
 
 		<div class="container" style=" display: flex; margin-top:  100px; padding-left:0px; ">
+
+			
+
 			<section style="flex:2; background-color: none; padding: 20px; padding-right: 180px; margin-left: -80px;
 			text-align: center; margin-top: 60px; " >
 				<h3 style="text-transform: uppercase; color: white;">Welcome To Research hub</h3><br>
