--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!--====== Favicon Icon ======-->
-	<link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
+	<!-- <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png"> -->
 
 	<!--====== Animate CSS ======-->
 	<link rel="stylesheet" href="assets/css/animate.css">
@@ -58,12 +58,12 @@
 	<section id="home" class="hero-area bg_cover" style="background-image: url(university-webflow-template\ \(1\).jpg); height: auto;width: 100%; display: block; ">
 	<header class="content" >
 		
-		<h2 style="text-align: center;" >ACADE V	
+		<h2 style="text-align: center; top :25px;">ACADE V	
 		</h2>
-		<h2 style="text-align: center;" >ACADE V	
+		<h2 style="text-align: center; top:25px ;" >ACADE V	
 		</h2>
 		</header>
-		<header class="content" style="margin-top: 50px; margin-bottom: -120px;">
+		<header class="content" style="margin-top: 70px;">
 			<h2> MIGRATION RESEARCH HUB</h2>
 		<h2> MIGRATION RESEARCH HUB</h2>
 		</header>
@@ -215,13 +215,14 @@
 		</div> -->
 
 		<!-- scroll bar -->
-		 <br>
-		 <br>
-		 <br>
-		 <br>
+		
 		<div class="welcome">
+			<br>
+			<br>
+			<br>
+			<br>
 			<h3 style="text-transform: uppercase; color: white;">Welcome To Research hub</h3><br>
-				<p style="color: white; justify-content:center">Research hub is an International peer Reviewed Multiple disciplinary e-journal which promotes 
+				<p style="color: white; justify-content:center;">Research hub is an International peer Reviewed Multiple disciplinary e-journal which promotes 
 					quality research in the field of higher education. Research friendly mechanism has been set up and all 
 				research papers are sent to UGC recognised centers for checking the plagiarism</p>
 			</div>
@@ -231,14 +232,14 @@
 			
 
 			<section style="flex:2; background-color: none; padding: 20px; padding-right: 180px; margin-left: -80px;
-			text-align: center; margin-top: 60px; " >
+			text-align: center; margin-top: 150px; " >
 				<h3 style="text-transform: uppercase; color: white;">Welcome To Research hub</h3><br>
 				<p style="color: white; justify-content: space-between;">Research hub is an International peer Reviewed Multiple disciplinary e-journal which promotes 
 					quality research in the field of higher education. Research friendly mechanism has been set up and all 
 				research papers are sent to UGC recognised centers for checking the plagiarism</p>
 
 			</section>
-			<article  style="flex:2; background-color: none; padding: 20px;" >
+			<article  style="flex:2; background-color: none; padding: 20px; margin-top: 100px;" >
 				<marquee direction="up" scrollamount="2" loop=" infinite" style="width: 100%; max-width: 400px;
 				 margin: 100px; margin-left: 0;  text-transform: uppercase;" >
 					<p style="color: white;">Learn Scientific Research </p>
